src/css/_TextSelection.scss
.BRtextLayer, .BRtranslateLayer {
    z-index: 2;
    position: absolute;
    top: 0;
    left: 0;
    color: transparent;
    transform-origin: 0 0;
    // Make it so right-clicking on "blank" part of text layer sends events to the image (for saving)
    pointer-events: none;
    cursor: text;
}

.BRtextLayer {
    mix-blend-mode: multiply;
}

.BRtranslateLayer {
    hyphens: auto;
}

.BRparagraphElement {
    margin: 0;
    cursor: text;
    font-family: Georgia, serif;
    line-height: 0;
}

.BRlineElement {
    pointer-events: all;
    white-space: nowrap;
    display: inline-block;

    // We use display: inline-block, otherwise this causes every line
    // to have newlines at the end in safari. BUT, since they're inline,
    // if the OCR has to short line in the same paragraph, they can wrap
    // and one can go onto the other. This adds an arbitrary margin to
    // the right of each line, forcing things to wrap.
    // See eg https://www-drini.archive.org/details/countofmontecris00duma_7/page/261/mode/2up
    // Page 261, second last line on the page.
    .BRtextLayer[dir=ltr] & { margin-right: 100%; }
    .BRtextLayer[dir=rtl] & { margin-left: 100%; }
}

// Highlight colors for text selection layer
.BRwordElement, .BRspace, .BRparagraphElement, .BRparagraphElement br {
    // these 2 properties do not work if joined
    &::selection {
        background: hsla(210, 74%, 62%, 0.4);
    }

    &::-moz-selection {
        background: hsla(210, 74%, 62%, 0.4);
        color:transparent;
    }
}

.BRtranslateLayer ::selection {
    background: hsla(210, 74%, 62%, 0.4);
}

.BRtranslateLayer ::-moz-selection {
    background: hsla(210, 74%, 62%, 0.4);
}

.BRparagraphElement br {
    visibility: hidden;
}

// Use CSS pseudo-elements to render the hyphens. This makes them
// not selectable, so copy/pasting text doesn't include them.
.BRwordElement--hyphen::after {
    content: "-";
}

// Hide text layer for performance during zooming & scrolling
.BRsmooth-zooming, .BRscrolling-active {
    // If the text layer has an annotation, don't hide it
    .BRpagecontainer:not(.BRpagecontainer--hasSelection):not(:has(hypothesis-highlight)):not(:has(.BRhighlight)) .BRtextLayer {
        display: none;
    }
}

// Hide text selection layers of off-screen pages
.BRmode1up .BRpagecontainer:not(.BRpage-visible) .BRtextLayer {
    display: none;
}

// Makes page image unselectable
.BRpagecontainer img {
    -webkit-user-select: none;
    -moz-user-select: none;
    user-select: none;
}


// These are Microsoft Edge specific fixed to make some of the
// browsers features work well. These are for the in-place
// translation.
.BRtextLayer:has([_istranslated="1"], msreadoutspan) {
    mix-blend-mode: normal;
}

.BRwordElement, .BRspace {
    &[_istranslated="1"], &[_msttexthash] {
        color: black;
        letter-spacing: unset !important;
    }
}

.BRlineElement:has([_istranslated="1"], [_msttexthash]) {
    background: rgba(248, 237, 192, 0.8);
    backdrop-filter: blur(8px);
    color: black;
    text-align: justify;
    width: inherit;
    &:not(:nth-last-child(2)) {
        text-align-last: justify;
    }
}

.BRlineElement[_msttexthash] {
    word-spacing: unset !important;
}

.BRtranslateLayer .BRparagraphElement {
    pointer-events: auto;
    overflow-y: auto;
    background: rgba(248, 237, 192, 0.8);
    backdrop-filter: blur(8px);
    color:black;
    line-height: 1em;
    text-align: justify;
}

.BRtranslateLayer .BRparagraphElement .BRlineElement {
    white-space: break-spaces;
    display: inline-block;
}

.BRtextLayer.showingTranslation {
    display: none;
}

.BRtranslateLayer .BRparagraphElement.BRtranslateHidden {
    display: none;
}

.br-select-menu__root {
  display: none;
  border-radius: 20px;
  background-color: #333;
  color: white;
  color-scheme: dark;
  padding: 2px;
  overflow: hidden;
  transition: border-radius 0.2s, opacity 0.2s;
}
.br-select-menu__root--scrolling {
  opacity: 0;
  pointer-events: none;
}
.br-select-menu__root:hover {
  border-radius: 8px;
}

.br-select-menu__root:hover .br-select-menu__option {
  border-radius: 6px;
}

.br-select-menu__option {
  --iconWidth: 15px;
  --iconHeight: 15px;
  --iconFillColor: currentColor;
  background: transparent;
  display: flex;
  align-items: center;
  border-radius: 20px;
  font-family: inherit;
  border: 0;
  transition: background-color 0.2s, border-radius 0.2s;
  cursor: pointer;
  text-wrap: nowrap;
  padding: 4px;
}

.br-select-menu__option:hover {
  background-color: rgba(255, 255, 255, 0.1);
}

.br-select-menu__icon {
  display: block;
  flex-shrink: 0;
  width: 17px;
  height: 17px;
}

.br-select-menu__label {
  margin-left: 4px;
  font-size: 12px;
}

@media (hover: hover) {
    .br-select-menu__label {
        width: 0px;
        margin-left: 0;
        opacity: 0;
        interpolate-size: allow-keywords;
        transition: width 0.2s;
    }
    .br-select-menu__root:hover .br-select-menu__label {
        width: auto;
        margin-left: 4px;
        opacity: 1;
    }
}

.BRtextLayer .BRhighlight {
    background-color: yellow;
    pointer-events: all;
    color: transparent;
}

@keyframes highlightTargetFlash {
  to { background-color: hsla(45, 80%, 66%, 1); }
}

// Style URI TextFragments, eg ?text=example
.BRtextLayer .BRhighlight--target-text, .BRtextLayer ::target-text {
    // Similar colour to the default one used in Safari, Firefox. Note Chrome uses a purple colour
    background-color: hsla(45, 80%, 66%, 0.6);
    color: transparent;
    animation: highlightTargetFlash 600ms 1 reverse;
}

